--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/030/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/030/b/index.xhtml
@@ -12,8 +12,9 @@
 			<com:scriptfile set="IGNITE" />
 			<com:stylefile path="../../common/common.css" />
 			<com:stylefile path="ccg030.b.style.css" />
-			<com:scriptfile path="ccg030.b.start.js" />
+			<com:scriptfile path="../a/ccg030.a.vm.js" />
 			<com:scriptfile path="ccg030.b.vm.js" />
+			<com:scriptfile path="ccg030.b.start.js" />
 		</ui:define>
 
 		<ui:define name="content">
