--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/005/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/005/b/index.xhtml
@@ -5,7 +5,7 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	<body>
-		<ui:composition template="../../../../master/dialog.xhtml">
+		<ui:composition template="../../../../master/base.xhtml">
 			<ui:define name="htmlHead">
 				<script>var dialogSize = { width: 1280, height: 780 };</script>
 				<com:stylefile path="ksm005.b.main.css" />
