--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/a/index.xhtml
@@ -12,12 +12,10 @@
 					width : 1200,
 					height : 520
 				};
-				__viewContext.primitiveValueConstraints.TimeOfDay = {
-						valueType: 'Clock',
-						max: '71:59',
-						min: '-12:00',
-				};
 			</script>
+			<com:ValidatorScript>
+					nts.uk.shr.com.time.TimeWithDayAttr
+			</com:ValidatorScript>
 			<com:scriptfile set="IGNITE" />
 			<com:scriptfile path="kdl003.a.start.js" />
 			<com:scriptfile path="kdl003.a.vm.js" />
@@ -74,7 +72,7 @@
 									{ prop: 'name', length: 3 },
 								]}"></span>
 									<input id="inputStartTime" tabindex="5"
-										data-bind="ntsTimeEditor: {name: '#[KDL003_12]', constraint:'TimeOfDay', value: startTime, inputFormat: 'time', mode: 'time', option: { width: '50px' }}" />
+										data-bind="ntsTimeWithDayEditor: {name: '#[KDL003_12]', constraint:'TimeWithDayAttr', value: startTime, enable: true, readonly: false, required: false, option: { width: '50px' }}" />
 									<span>#{i18n.getText('KDL003_13')}</span>
 									<span tabindex="6"
 										data-bind="ntsComboBox: {
@@ -93,7 +91,7 @@
 									{ prop: 'name', length: 3 },
 								]}"></span>
 									<input id="inputEndTime" tabindex="7"
-										data-bind="ntsTimeEditor: {name: '#[KDL003_15]', constraint:'TimeOfDay', value: endTime, inputFormat: 'time', mode: 'time', option: { width: '50px' }}" />
+										data-bind="ntsTimeEditor: {name: '#[KDL003_15]', constraint:'TimeWithDayAttr', value: endTime, enable: true, readonly: false, required: false, option: { width: '50px' }}" />
 									<button tabindex="8" class="caret-bottom" data-bind="click: search">#{i18n.getText('KDL003_16')}</button>
 									<button tabindex="9" class="pull-right" data-bind="click: clearSearchCondition">#{i18n.getText('KDL003_17')}</button>
 								</div>
