fix bug #87284: fix D1_9 CMM001

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/cmm001.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/cmm001.a.style.css
@@ -311,6 +311,9 @@ body>div:nth-child(4) {
 
 #tab-1, #tab-2, #tab-3 {
 	height: 370px;
+	overflow: visible !important;
 }
 
-
+#tab-1.disappear, #tab-2.disappear, #tab-3.disappear {
+	overflow: hidden !important;
+}
