fix scroll fixedtable.

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/base/fixedtable/fixedtable.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/base/fixedtable/fixedtable.xhtml
@@ -28,9 +28,9 @@
 
 
 		<!-- BEGIN CONTENT AREA -->
-		<div data-bind="style: {}">
+		<div>
 			<!-- BEGIN BINDING HEADER -->
-			<table data-bind="style: {}" id="fixed-table-custom"
+			<table id="fixed-table-custom"
 				class="table-fixed-kmk003">
 				<colgroup>
 					<col width="36"></col>
