--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/012/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/012/b/index.xhtml
@@ -25,7 +25,7 @@
 					<div class="control-group">
 						<div data-bind="ntsFormLabel: {required: true }">#{i18n.getText('CAS012_20')}</div>
 						<input tabindex="1" id="search"
-							data-bind="ntsTextEditor: {value: searchValue}" />
+							data-bind="ntsTextEditor: {value: searchValue, enterkey: enterPress}" />
 						<button tabindex="2" id="searchButton" data-bind="click: search">#{i18n.getText('CAS012_23')}</button>
 					</div>
 					<table tabindex="3" id="grid_container" style="margin: auto;"
@@ -34,8 +34,7 @@
 											options: dataSource,
 											optionsValue: 'userID',
 											columns: columns,
-											value: selectUserID,
-											enterkey: enterPress}">
+											value: selectUserID}">
 					</table>
 
 				</div>
