--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/007/share/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/007/share/index.xhtml
@@ -282,7 +282,7 @@
 				data-bind="ntsFormLabel: { constraint: 'AppReason'}">#{i18n.getText('KAF007_27')}</div>
 			<!--A12_1 申請理由-->
 			<div id="multiline-kaf007">
-				<textarea
+				<textarea id="inpReasonTextarea"
 					data-bind="ntsMultilineEditor: {value: $parent.multilContent, 
 													option: {
 															resizeable: false,
