--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/009/share/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/009/share/index.xhtml
@@ -246,7 +246,7 @@
 			<div class="lblTitleKAF009"
 				data-bind="ntsFormLabel: { constraint: 'AppReason'}">#{i18n.getText('KAF009_27')}</div>
 			<div id="inpReason">
-				<textarea
+				<textarea id="inpReasonTextarea"
 					data-bind="ntsMultilineEditor: {value: multilContent,option: multiOption, constraint: 'AppReason', required : requiredReason(), name: '#[KAF009_29]'}" />
 			</div>
 		</div>
