Update UI KAL004

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
@@ -11,6 +11,9 @@
 				nts.uk.ctx.at.function.dom.alarm.AlarmPatternCode
 				nts.uk.ctx.at.function.dom.alarm.AlarmPatternName
             </com:ValidatorScript>
+            <com:EnumScript>
+				nts.uk.ctx.at.function.dom.alarm.extractionrange.daily.SpecifiedMonth
+			</com:EnumScript>
             <com:scriptfile set="IGNITE" />
             <com:scriptfile path="../share/model.js" />
             <!-- Tab2 -->
