--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/b/index.xhtml
@@ -7,6 +7,9 @@
 <body>
 	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
+			<com:ValidatorScript>
+				nts.uk.ctx.at.function.dom.alarm.extractionrange.daily.Day
+            </com:ValidatorScript>
 			<com:scriptfile set="IGNITE" />
 			<script>var dialogSize = { width: 750, height: 500 };</script>
 			<com:EnumScript>
@@ -22,32 +25,32 @@
 
 			<div id="contents-area">
 				<div class="header">
-					<span class="label" >Add QA</span>
+					<span class="label">Add QA</span>
 				</div>
-				<div class="cf"> 
+				<div class="cf">
 					<div class="valign-center control-group start">
 						<span class="label">#{i18n.getText('KAL004_29')}</span>
 						<div class="day">
 							<input type="radio" name="strRadio" data-bind="checkedValue: 0, checked: strSelected, enable: enable" />
-							<span class="label" data-bind="text: txtDay"></span>	
-							<input class="input-box" data-bind="enable: (strSelected() == 0)"/>
-							<span class="label" >#{i18n.getText('KAL004_34')}</span>	
-							<span class="label" >#{i18n.getText('KAL004_35')}</span>								
+							<span class="label" data-bind="text: txtDay "></span> 
+							<input class="input-box input-str" data-bind="ntsTextEditor: {value:strDay, constraint:'Day', required: true, enable: (strSelected() == 0)}" />
+							<span class="label">#{i18n.getText('KAL004_34')}</span> 
+							<span class="label">#{i18n.getText('KAL004_35')}</span>
 						</div>
 						<div class="month">
 							<input type="radio" name="strRadio" data-bind="checkedValue: 1, checked: strSelected,, enable: enable" />
 							<div class="combo-box" tabindex="2"
 								data-bind="ntsComboBox: {
-								options: strListSpecifiedMonth,
+								options: strComboMonth,
 								optionsValue: 'value',
-								value: strMonthSelected,
+								value: strMonth,
 								visibleItemsCount: 4,
 								optionsText: 'name',
 								enable: (strSelected() == 1),
 								columns: [
 									{ prop: 'name', length: 5 }
 								]}"></div>
-							<span class="label" data-bind="text: txtMonth"></span>
+							<span class="label" data-bind="text: txtStrMonth"></span>
 						</div>
 					</div>
 					<div class="centerSys">#{i18n.getText('KAL004_30')}</div>
@@ -55,31 +58,32 @@
 						<span class="label">#{i18n.getText('KAL004_31')}</span>
 						<div class="day">
 							<input type="radio" name="endRadio" data-bind="checkedValue: 0, checked: endSelected, enable: enable" />
-							<span class="label" data-bind="text: txtDay"></span>	
-							<input class="input-box" data-bind="enable: (endSelected() == 0)"/>
-							<span class="label" >#{i18n.getText('KAL004_34')}</span>	
-							<span class="label" >#{i18n.getText('KAL004_35')}</span>								
+							<span class="label" data-bind="text: txtDay"></span> 
+							<input class="input-box input-end" data-bind="ntsTextEditor: {value:endDay, constraint:'Day', required: true, enable: (endSelected() == 0)}" />
+							<span class="label">#{i18n.getText('KAL004_34')}</span> 
+							<span class="label">#{i18n.getText('KAL004_35')}</span>
 						</div>
 						<div class="month">
-							<input type="radio" name="endRadio" data-bind="checkedValue: 1, checked: endSelected, enable: strSelected() == 1 " />
+							<input type="radio" name="endRadio"
+								data-bind="checkedValue: 1, checked: endSelected, enable: strSelected() == 1 " />
 							<div class="combo-box" tabindex="1"
 								data-bind="ntsComboBox: {
-								options: endListSpecifiedMonth,
+								options: endComboMonth,
 								optionsValue: 'value',
-								value: endMonthSelected,
+								value: endMonth,
 								optionsText: 'name',
 								visibleItemsCount: 4,
 								enable: (strSelected() == 1 &amp;&amp; endSelected() == 1),
 								columns: [
 									{ prop: 'name', length: 5 }
 								]}"></div>
-							<span class="label" data-bind="text: txtMonth"></span>
+							<span class="label" data-bind="text: txtEndMonth"></span>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div id="functions-area-bottom">
-				<button data-bind="">#{i18n.getText('KAL003_45')}</button>
+				<button data-bind="click :Decide">#{i18n.getText('KAL003_45')}</button>
 				<button data-bind="click :cancel_Dialog">#{i18n.getText('KAL003_46')}</button>
 			</div>
 		</ui:define>
