--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/b/index.xhtml
@@ -64,7 +64,7 @@
 			</div>
 			<div id='functions-area-bottom'>
 				<!-- B011: button 決定 -->
-				<button id="registration" class="proceed x-large" data-bind="click: registerItems" tab-index="5">#{i18n.getText('CPS009_29')}</button>
+				<button id="registration" class="proceed large" data-bind="click: registerItems" tab-index="5">#{i18n.getText('CPS009_29')}</button>
 				<!-- B012: button キャンセル -->
 				<button id="cancel" data-bind="click: closeDialog" tab-index="6">#{i18n.getText('CPS009_30')}</button>
 
