--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/b/index.xhtml
@@ -26,7 +26,7 @@
 				<div style="position: relative; top: 30%; margin: 0 auto auto 40%;">
 					<table>
 						<tr>
-							<td colspan="2"><img src="CCG007_001.png" /></td>
+							<td colspan="2" style="padding-bottom: 30px; "><img src="kin.gif" /></td>
 						</tr>
 						<tr>
 							<td colspan="2"><div class="pad_5"
