--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/c/index.xhtml
@@ -21,7 +21,7 @@
 				<div style="position: relative; top: 30%; margin: 0 auto auto 40%;">
 					<table>
 						<tr>
-							<td colspan="4" class="pad_5"><img src="CCG007_001.png" /></td>
+							<td class="pad_5" colspan="4" style="padding-bottom: 30px; padding-left: 40px"><img src="kin.gif" /></td>
 						</tr>
 						<tr>
 							<td colspan="2" class="pad_5"><div
