--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/d/index.xhtml
@@ -17,18 +17,14 @@
 			<!-- TODO remove after kiban fix -->
 			<div id="functions-area" class="divHeader"></div>
 			<!-- ===== -->
-			<div style="background-color: lightblue;" id="contents-area">
+			<div style="background-color: white;" id="contents-area">
 				<div style="position: relative; top: 20%; margin: 0 auto auto 40%;">
 					<table>
 						<tr>
-							<td colspan="2" class="pad_5"><img src="CCG007_001.png" /></td>
+							<td style="padding-bottom: 30px; padding-left: 50px" colspan="2" class="pad_5"><img src="kin.gif" /></td>
 						</tr>
-						<tr>
-							<td colspan="2" class="pad_5"><div
-									data-bind="text: '#{i18n.getText('CCG007_7')}'"></div></td>
-						</tr>
-						<tr>
-							<td><img alt="" src="71.png" /></td>
+						<tr style="height: 40px">
+							<td></td>
 							<td class="pad_5">
 								<div tabindex="1" id="combo-box"
 									data-bind="ntsComboBox: {
@@ -47,12 +43,9 @@
 										]}"></div>
 							</td>
 						</tr>
-						<tr>
-							<td colspan="2" class="pad_5"><div
-									data-bind="text: '#{i18n.getText('CCG007_8')}'"></div></td>
-						</tr>
-						<tr>
-							<td><img alt="" src="26.png" /></td>
+						<tr  style="height: 80px">
+							<td><div
+									data-bind="text: 'ID'"></div></td>
 							<td class="pad_5"><div>
 									<input tabindex="2" id="employee-code-inp"
 										data-bind="ntsTextEditor: {
@@ -65,11 +58,8 @@
 								</div></td>
 						</tr>
 						<tr>
-							<td colspan="2" class="pad_5"><div
+							<td><div
 									data-bind="text: '#{i18n.getText('CCG007_2')}'"></div></td>
-						</tr>
-						<tr>
-							<td><img alt="" src="72.png" /></td>
 							<td class="pad_5"><div>
 									<input tabindex="3" id="password-input"
 										data-bind="ntsTextEditor: {
