--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/jb/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/jb/index.xhtml
@@ -47,12 +47,14 @@
 					<div>
 						<div class="mw-90" data-bind="ntsFormLabel: {}">#{i18n.getText('KSU001_911')}</div>
 						<input id="time-edit1"
-							data-bind="ntsTimeEditor: {value: time1, inputFormat: 'time'}" />
+							data-bind="ntsTimeEditor: {value: time1, inputFormat: 'time', enable: isEnableButton}" />
 						<span id="spelcial">#{i18n.getText('KSU001_913')}</span> <input
 							id="time-edit2"
-							data-bind="ntsTimeEditor: {value: time2, inputFormat: 'time'}" />
-						<button class="search" data-bind="click:search">#{i18n.getText('KSU001_67')}</button>
-						<button class="clear-search" data-bind="click:clearSearch, enable: isEnableClearSearchButton">#{i18n.getText('KSU001_68')}</button>
+							data-bind="ntsTimeEditor: {value: time2, inputFormat: 'time',enable: isEnableButton}" />
+						<button class="search"
+							data-bind="click:search, enable: isEnableButton">#{i18n.getText('KSU001_67')}</button>
+						<button class="clear-search"
+							data-bind="click:clearSearch, enable: isEnableClearSearchButton">#{i18n.getText('KSU001_68')}</button>
 					</div>
 					<div>
 						<div id="combo-box2"
@@ -62,7 +64,7 @@
 										value: selectedWorkTimeCode,
 										optionsText: 'labelDisplay', 
 										editable:  false,
-										enable: true,
+										enable: isEnableButton,
 										columns: [
 											{ prop: 'workTimeCode', length: 3 },
 											{ prop: 'symbolName', length: 2 },
