fix bug 不具合一覧_KMF004_特別休暇情報の登録_20180112

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/a/index.xhtml
@@ -381,8 +381,8 @@
 												width: '60'}),
 												required: ko.computed(function(){ return grantDaySingleType()==0 &amp;&amp; $parent.inp_grantMethod() == 1; }),
 												enable: grantDaySingleType()==0,
-												name: '#[KMF004_31]'},
-												constraint:'FixNumberDays'" />
+												name: '#[KMF004_31]',
+												constraint:'FixNumberDays'}" />
 										</div>
 									</div>
 									<div>
