--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/functionwrap/sidebar/sidebar-sub.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/functionwrap/sidebar/sidebar-sub.xhtml
@@ -7,7 +7,7 @@
 
 <body>
 
-	<ui:composition template="../../../../master/sidebar.xhtml">
+	<ui:composition template="../../../../master/dialogsidebar.xhtml">
 		<ui:define name="sidebar-head">
 			<script>var dialogSize = { width: 900, height: 700 };</script>
             <com:scriptfile set="IGNITE" />
