--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/e/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/e/index.xhtml
@@ -40,9 +40,9 @@
 							<td width="30"></td>
 							<td><div data-bind="ntsFormLabel: {}">#{i18n.getText('CCG013_57')}</div></td>
 							<td width="30"></td>
-							<td><span class="display-code" data-bind="text: webMenuCode()"></span></td>
+							<td><span class="display-code" data-bind="text: webMenuCode"></span></td>
 							<td width="10"></td>
-							<td><span class="display-name" data-bind="text: webMenuName()">ニューへコ</span></td>
+							<td><span class="display-name" data-bind="text: webMenuName"></span></td>
 						</tr>
 						<tr>
 							<td width="10"></td>
