KMF004 Fix bugs

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/c/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/c/index.xhtml
@@ -43,7 +43,7 @@
 					</div>
 					
 					<div id="monthdays">
-						<div class="cal-value" data-bind="ntsDatePicker: { value: standardDate, dateFormat: 'YYYY/MM/DD', enable: standardDateEnable }"></div>
+						<div id="standard-date-input" class="cal-value" data-bind="ntsDatePicker: { value: standardDate, dateFormat: 'YYYY/MM/DD', enable: standardDateEnable }"></div>
 					</div>
 				</div>
 			</td>
