--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/b/index.xhtml
@@ -72,7 +72,7 @@
 														enable: true}">
 					</div>
 					<div id="monthdays">
-						<div class="cal-value" data-bind="ntsDatePicker: { value: value, dateFormat: 'YYYY/MM/DD', enable: enable }"></div>
+						<div id="month-day-input" class="cal-value" data-bind="ntsDatePicker: { value: value, dateFormat: 'YYYY/MM/DD', enable: enable }"></div>
 					</div>					
 				</div>
 				
