--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/daily/fixedcheckcondition/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/daily/fixedcheckcondition/index.xhtml
@@ -31,11 +31,10 @@
 						<table id="table-fixed">
 							<thead>
 							<tr class="bg-green">
-								<!-- I2_2 3 4 5 6 7 8 9 -->
 								<th style="width: 55px;text-align: center;"><div data-bind="ntsCheckBox: { checked: false }"></div></th>
-								<th style="width: 100px;">#{i18n.getText('KDW001_25')}</th>
-								<th style="width: 155px; text-align: center;">#{i18n.getText('KDW001_26')}</th>
-								<th style="width: 200px;">#{i18n.getText('KDW001_80')}</th>
+								<th style="width: 55px;text-align: center;">#{i18n.getText('KAL003_24')}</th>
+								<th style="width: 155px; ">#{i18n.getText('KAL003_54')}</th>
+								<th style="width: 200px;">#{i18n.getText('KAL003_55')}</th>
 								
 							</tr>
 						</thead>
@@ -45,7 +44,7 @@
 									<td style="text-align: center;">
 										<div data-bind="ntsCheckBox: { checked: false }"></div>
 									</td>
-									<td data-bind="text: $data.no"></td>
+									<td style="text-align: center;" data-bind="text: $data.no"></td>
 									<td data-bind="text: $data.name"></td>
 									<td data-bind="text: $data.message"></td>
 								</tr>
