--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/d/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/d/index.xhtml
@@ -5,7 +5,7 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
-	<ui:composition template="../../../../master/sidebar.xhtml">
+	<ui:composition template="../../../../master/dialogsidebar.xhtml">
 		<ui:define name="sidebar-head">
 			<script>var dialogSize = { width: 1200, height: 800 };</script>
 			<com:ValidatorScript>
