--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/018/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/018/a/index.xhtml
@@ -179,7 +179,7 @@
 											<!-- A3_16: -->
 											<td class="approver"><div>
 												<div data-bind="foreach: appPhase1.approver">
-													<div data-bind="text: name + confirmName"><br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"></div><br />
 												</div>
 											</div></td>
 											<!-- A3_17: -->
@@ -191,7 +191,7 @@
 											<!-- A3_19: -->
 											<td class="approver">
 												<div data-bind="foreach: appPhase2.approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- A3_20: -->
@@ -203,7 +203,7 @@
 											<!-- A3_22: -->										
 											<td class="approver">
 												<div data-bind="foreach: appPhase3.approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div></td>
 											<!-- A3_23: -->
 											<td class="button_phase">
@@ -214,7 +214,7 @@
 											<!-- A3_25: -->
 											<td class="approver">
 												<div data-bind="foreach: appPhase4.approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"></div><br />
 												</div>
 											</td>
 											<!-- A3_26: -->
@@ -226,7 +226,7 @@
 											<!-- A3_28: -->
 											<td class="approver">
 												<div data-bind="foreach: appPhase5.approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- A3_29: Button delete -->
@@ -350,7 +350,7 @@
 											<!-- B3_16: -->
 											<td class="approver" data-bind="with: appPhase1"><div>
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</div></td>
 											<!-- B3_17: -->
@@ -362,7 +362,7 @@
 											<!-- B3_19: -->
 											<td class="approver" data-bind="with: appPhase2">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- B3_20: -->
@@ -374,7 +374,7 @@
 											<!-- B3_22: -->										
 											<td class="approver" data-bind="with: appPhase3">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div></td>
 											<!-- B3_23: -->
 											<td class="button_phase">
@@ -385,7 +385,7 @@
 											<!-- B3_25: -->
 											<td class="approver" data-bind="with: appPhase4">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- B3_26: -->
@@ -397,7 +397,7 @@
 											<!-- B3_28: -->
 											<td class="approver" data-bind="with: appPhase5">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 										</tr>
@@ -562,7 +562,7 @@
 											<!-- C3_16: -->
 											<td class="approver" data-bind="with: appPhase1"><div>
 												<div data-bind="foreach: approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</div></td>
 											<!-- C3_17: -->
@@ -574,7 +574,7 @@
 											<!-- C3_19: -->
 											<td class="approver" data-bind="with: appPhase2">
 												<div data-bind="foreach: approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- C3_20: -->
@@ -586,7 +586,7 @@
 											<!-- C3_22: -->										
 											<td class="approver" data-bind="with: appPhase3">
 												<div data-bind="foreach: approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div></td>
 											<!-- C3_23: -->
 											<td class="button_phase">
@@ -597,7 +597,7 @@
 											<!-- C3_25: -->
 											<td class="approver" data-bind="with: appPhase4">
 												<div data-bind="foreach: approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- C3_26: -->
@@ -609,7 +609,7 @@
 											<!-- C3_28: -->
 											<td class="approver" data-bind="with: appPhase5">
 												<div data-bind="foreach: approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- C3_29: Button delete -->
@@ -704,13 +704,13 @@
 											<th class="modeB" style ="text-align: center;">#{i18n.getText('CMM018_28')}</th>
 											<!-- D3_11 -->
 											<th class="modeB" style ="text-align: center;">#{i18n.getText('CMM018_29')}</th>
-											<!-- B3_10 -->
+											<!-- D3_10 -->
 											<th class="modeB" style ="text-align: center;">#{i18n.getText('CMM018_28')}</th>
-											<!-- B3_11 -->
+											<!-- D3_11 -->
 											<th class="modeB" style ="text-align: center;">#{i18n.getText('CMM018_29')}</th>
-											<!-- B3_10 -->
+											<!-- D3_10 -->
 											<th class="modeB" style ="text-align: center;">#{i18n.getText('CMM018_28')}</th>
-											<!-- B3_11 -->
+											<!-- D3_11 -->
 											<th class="modeB" style ="text-align: center;">#{i18n.getText('CMM018_29')}</th>
 										</tr>
 									</thead>
@@ -733,7 +733,7 @@
 											<!-- D3_16: -->
 											<td class="approver" data-bind="with: appPhase1"><div>
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</div></td>
 											<!-- D3_17: -->
@@ -745,7 +745,7 @@
 											<!-- D3_19: -->
 											<td class="approver" data-bind="with: appPhase2">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- D3_20: -->
@@ -757,7 +757,7 @@
 											<!-- D3_22: -->										
 											<td class="approver" data-bind="with: appPhase3">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div></td>
 											<!-- D3_23: -->
 											<td class="button_phase">
@@ -768,7 +768,7 @@
 											<!-- D3_25: -->
 											<td class="approver" data-bind="with: appPhase4">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- D3_26: -->
@@ -780,7 +780,7 @@
 											<!-- D3_28: -->
 											<td class="approver" data-bind="with: appPhase5">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 										</tr>
@@ -941,7 +941,7 @@
 											<!-- E3_16: -->
 											<td class="approver" data-bind="with: appPhase1"><div>
 												<div data-bind="foreach: approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</div></td>
 											<!-- E3_17: -->
@@ -953,7 +953,7 @@
 											<!-- E3_19: -->
 											<td class="approver" data-bind="with: appPhase2">
 												<div data-bind="foreach: approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- E3_20: -->
@@ -965,7 +965,7 @@
 											<!-- E3_22: -->										
 											<td class="approver" data-bind="with: appPhase3">
 												<div data-bind="foreach: approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div></td>
 											<!-- E3_23: -->
 											<td class="button_phase">
@@ -976,7 +976,7 @@
 											<!-- E3_25: -->
 											<td class="approver" data-bind="with: appPhase4">
 												<div data-bind="foreach: approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- E3_26: -->
@@ -988,7 +988,7 @@
 											<!-- E3_28: -->
 											<td class="approver" data-bind="with: appPhase5">
 												<div data-bind="foreach: approver">
-													<div data-bind="text: name + confirmName"> <br /></div>
+													<div class = "limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- E3_29: Button delete -->
@@ -1114,7 +1114,7 @@
 											<!-- F3_16: -->
 											<td class="approver" data-bind="with: appPhase1"><div>
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</div></td>
 											<!-- F3_17: -->
@@ -1126,7 +1126,7 @@
 											<!-- F3_19: -->
 											<td class="approver" data-bind="with: appPhase2">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- F3_20: -->
@@ -1138,7 +1138,7 @@
 											<!-- F3_22: -->										
 											<td class="approver" data-bind="with: appPhase3">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div></td>
 											<!-- F3_23: -->
 											<td class="button_phase">
@@ -1149,7 +1149,7 @@
 											<!-- F3_25: -->
 											<td class="approver" data-bind="with: appPhase4">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 											<!-- F3_26: -->
@@ -1161,7 +1161,7 @@
 											<!-- F3_28: -->
 											<td class="approver" data-bind="with: appPhase5">
 												<div data-bind="foreach: approver">
-													<div class = "fixName" data-bind="text: name + confirmName"> <br /></div>
+													<div class = "fixName limited-label" data-bind="text: name + confirmName"> </div><br />
 												</div>
 											</td>
 										</tr>
