CMM018: them limited-label vao appName

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/018/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/018/a/index.xhtml
@@ -165,7 +165,9 @@
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- A3_12: App Name -->
 											<td class="name td-first-bg" data-bind="style: { overflow: employRootAtr ? 'hidden' : 'visible' }">
-												<div data-bind = "text: appTypeName" style="display: inline-block;"></div>
+												<div style="display: inline-block;">
+													<div class = "limited-label" data-bind = "text: appTypeName"></div>
+												</div>
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
 													<button data-bind="ntsHelpButton: {image: '../images/CMM018_001.png', position: 'right top',enable: true}" >?</button>
 												</div>
@@ -334,8 +336,10 @@
 									<tbody style = "overflow-y: scroll; height: 200px;" data-bind = "with: comRoot">
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- B3_12: App Name -->
-											<td class="name td-first-bg" data-bind="style: { overflow: employRootAtr ? 'hidden' : 'visible' }">
-												<div data-bind = "text: appTypeName" style="display: inline-block;white-space: nowrap;"></div>
+											<td class="name td-first-bg control-group" data-bind="style: { overflow: employRootAtr ? 'hidden' : 'visible' }">
+												<div style="display: inline-block;">
+													<div class = "limited-label" data-bind = "text: appTypeName"></div>
+												</div>
 												<!-- B3_13: -->
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
 													<button data-bind="ntsHelpButton: {image: '../images/CMM018_001.png', position: 'right top',enable: true}" >?</button>
@@ -548,7 +552,9 @@
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- C3_12: App Name -->
 											<td class="name td-first-bg" data-bind="style: { overflow: employRootAtr ? 'hidden' : 'visible' }">
-												<div data-bind = "text: appTypeName" style="display: inline-block;"></div>
+												<div style="display: inline-block;">
+													<div class = "limited-label" data-bind = "text: appTypeName"></div>
+												</div>
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
 													<button data-bind="ntsHelpButton: {image: '../images/CMM018_001.png', position: 'right top',enable: true}" >?</button>
 												</div>
@@ -718,8 +724,10 @@
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- D3_12: App Name -->
 											<td class="name td-first-bg" data-bind="style: { overflow: employRootAtr ? 'hidden' : 'visible' }">
-												<div data-bind = "text: appTypeName" style="display: inline-block;white-space: nowrap;"></div>
-												<!-- B3_13: -->
+												<div style="display: inline-block;">
+													<div class = "limited-label" data-bind = "text: appTypeName"></div>
+												</div>
+												<!-- D3_13: -->
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
 													<button data-bind="ntsHelpButton: {image: '../images/CMM018_001.png', position: 'right top',enable: true}" >?</button>
 												</div>
@@ -927,7 +935,9 @@
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- E3_12: App Name -->
 											<td class="name td-first-bg" data-bind="style: { overflow: employRootAtr ? 'hidden' : 'visible' }">
-												<div data-bind = "text: appTypeName" style="display: inline-block;"></div>
+												<div style="display: inline-block;">
+													<div class = "limited-label" data-bind = "text: appTypeName"></div>
+												</div>
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
 													<button data-bind="ntsHelpButton: {image: '../images/CMM018_001.png', position: 'right top',enable: true}" >?</button>
 												</div>
@@ -1099,8 +1109,10 @@
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- F3_12: App Name -->
 											<td class="name td-first-bg" data-bind="style: { overflow: employRootAtr ? 'hidden' : 'visible' }">
-												<div data-bind = "text: appTypeName" style="display: inline-block; white-space: nowrap;"></div>
-												<!-- B3_13: -->
+												<div style="display: inline-block;">
+													<div class = "limited-label" data-bind = "text: appTypeName"></div>
+												</div>
+												<!-- F3_13: -->
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
 													<button data-bind="ntsHelpButton: {image: '../images/CMM018_001.png', position: 'right top',enable: true}" >?</button>
 												</div>
