kmk003 a10 add service get bonus pay setting for show name in tab 10

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
@@ -51,6 +51,7 @@
 			<com:stylefile path="../a9/kmk003.a9.style.css" /><!-- End tab 09 -->
 			
 			<!-- Begin tab 10 -->
+			<com:scriptfile path="../a10/kmk003.a10.service.js" />
 			<com:scriptfile path="../a10/kmk003.a10.vm.js" />
 			<com:stylefile path="../a10/kmk003.a10.style.css" /><!-- End tab 10 -->
 			
