--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a6/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a6/index.xhtml
@@ -14,7 +14,7 @@
 			<div tabindex="89" id="tab6_fixtable_fixed" data-bind="ntsFixTableCustom: {option: fixTableOptionFixed}"></div>
 		</com:ko>
 	</com:ko>
-	<com:ko tag="if" bind="isFlowMode">
+	<!-- <com:ko tag="if" bind="isFlowMode">
 		<div tabindex="90" id="tab6_fixtable_flow" data-bind="ntsFixTableCustom: {option: fixTableOptionFlow}"></div>
-	</com:ko>
+	</com:ko> -->
 </ui:composition>
